--- a/SmartTradeAI/frontend/package.json
+++ b/SmartTradeAI/frontend/package.json
@@ -11,7 +11,11 @@
   },
   "dependencies": {
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "react-router-dom": "^6.19.0",
+    "tailwindcss": "^3.3.5",
+    "postcss": "^8.4.31",
+    "autoprefixer": "^10.4.16"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
