--- a/SmartTradeAI/backend/alembic.ini
+++ b/SmartTradeAI/backend/alembic.ini
@@ -1,32 +1,16 @@
 [alembic]
-script_location = migrations
-sqlalchemy.url = driver://user:pass@localhost/dbname
+script_location = alembic
+sqlalchemy.url = ${DATABASE_URL}
+revision_table_filename = alembic_version
+version_locations = %(script_location)s/versions
+output_encoding = utf-8
 
 [post_write_hooks]
+# Set to 'true' to run the 'black' formatter on new migrations
+# black = true
 
 [loggers]
 keys = root,sqlalchemy,alembic
-
-[handlers]
-keys = console
-
-[formatters]
-keys = generic
-
-[logger_root]
-level = WARN
-handlers = console
-qualname =
-
-[logger_sqlalchemy]
-level = WARN
-handlers =
-qualname = sqlalchemy.engine
-
-[logger_alembic]
-level = INFO
-handlers =
-qualname = alembic
 
 [handler_console]
 class = StreamHandler
@@ -36,4 +20,18 @@ formatter = generic
 
 [formatter_generic]
 format = %(levelname)-5.5s [%(name)s] %(message)s
-datefmt = %H:%M:%S
+
+[logger_root]
+level = INFO
+handlers = console
+qualname =
+
+[logger_sqlalchemy]
+level = WARN
+handlers = console
+qualname = sqlalchemy.engine
+
+[logger_alembic]
+level = INFO
+handlers = console
+qualname = alembic
