--- a/SmartTradeAI/frontend/Dockerfile
+++ b/SmartTradeAI/frontend/Dockerfile
@@ -1,18 +1,23 @@
-# Build stage
-FROM node:20-alpine as build
+# Stage 1: Build the React application
+FROM node:20-alpine as builder
 
 WORKDIR /app
-COPY package*.json ./
-RUN npm ci --silent
+
+COPY package.json package-lock.json ./
+RUN npm install
 
 COPY . .
+
 RUN npm run build
 
-# Production stage
-FROM nginx:alpine
-# Vite outputs to /app/dist
-COPY --from=build /app/dist /usr/share/nginx/html
+# Stage 2: Serve the application with Nginx
+FROM nginx:stable-alpine
+
+COPY --from=builder /app/dist /usr/share/nginx/html
+
+# Copy the Nginx configuration
 COPY nginx.conf /etc/nginx/conf.d/default.conf
 
 EXPOSE 80
+
 CMD ["nginx", "-g", "daemon off;"]
